deleted files and added title and definition in html

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,33 +4,33 @@
 
 <article>
   <header>
-    <h2>Story Item</h2>
+    <h2>Why is MVC so important</h2>
   </header>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae voluptatum velit nulla provident eos ipsam facere inventore eum. Consectetur laboriosam asperiores expedita repellendus esse iste consequatur quia doloremque cum praesentium.
+ MVC separates data, interface, and control, making code organized and maintainable.
   </p>
 </article>
 <article>
   <header>
-    <h2>Story Item</h2>
+    <h2>What are handlebars</h2>
   </header>
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias neque deserunt autem? Eius sunt, voluptate, cumque consequatur sequi repellendus deleniti laborum in odio soluta quam, temporibus ipsa labore a quis.
+  Handlebars is a templating language for dynamically generating HTML in web development.
   </p>
 </article>
 <article>
   <header>
-    <h2>Story Item</h2>
+    <h2>What are helpers</h2>
   </header>
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad recusandae sapiente eos placeat inventore voluptatem maxime iste velit, incidunt quam, veniam nostrum! Officiis veniam, alias odio voluptatem consectetur debitis magnam.
+  Helpers are functions that add custom logic to templates for tasks like formatting dates or conditionally displaying content.
   </p>
 </article>
 <article>
   <header>
-    <h2>Story Item</h2>
+    <h2>What is sequelize</h2>
   </header>
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptas placeat reprehenderit. Amet doloribus facere mollitia odio obcaecati nihil dolore culpa asperiores architecto dolorum. Minus fuga exercitationem dolore deleniti! Voluptates.
+   Sequelize is a Node.js ORM for simplifying database interactions using JavaScript objects, abstracting away SQL queries. 
   </p>
 </article>
