--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,19 @@ article footer {
   display: flex;
   justify-content: flex-end;
 }
+
+ h2 {
+  color: blueviolet;
+  background-color:cornflowerblue;
+  padding: 20px;
+ }
+
+ p {
+  color:blue;
+  font-weight: 600;
+  background-color:aliceblue;
+  padding: 20px;
+  font-size: 25px;
+ }
+ 
+ 
