added log in button to homepage

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,9 @@
 <header>
   <h2>Blog Index</h2>
 </header>
-
+<div class="">
+      <a href="./login"><button>Log In</button></a>
+</div>
 <article>
   <header>
     <h2>Why is MVC so important</h2>
