added dashboard button to index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,17 @@
 <header>
-  <h2>Blog </h2>
+
 </header>
 <div class="">
-      <a href="./login"><button>Log In</button></a>
+<a href="./login" role="button">Login</a>
+<a href="./dashboard" role="button">Dashboard</a>
 </div>
 <article>
   <header>
     <h2>Why is MVC so important</h2>
   </header>
   <p>
- MVC separates data, interface, and control, making code organized and maintainable.
+    MVC separates data, interface, and control, making code organized and
+    maintainable.
   </p>
 </article>
 <article>
@@ -17,7 +19,8 @@
     <h2>What are handlebars</h2>
   </header>
   <p>
-  Handlebars is a templating language for dynamically generating HTML in web development.
+    Handlebars is a templating language for dynamically generating HTML in web
+    development.
   </p>
 </article>
 <article>
@@ -25,7 +28,8 @@
     <h2>What are helpers</h2>
   </header>
   <p>
-  Helpers are functions that add custom logic to templates for tasks like formatting dates or conditionally displaying content.
+    Helpers are functions that add custom logic to templates for tasks like
+    formatting dates or conditionally displaying content.
   </p>
 </article>
 <article>
@@ -33,6 +37,7 @@
     <h2>What is sequelize</h2>
   </header>
   <p>
-   Sequelize is a Node.js ORM for simplifying database interactions using JavaScript objects, abstracting away SQL queries. 
+    Sequelize is a Node.js ORM for simplifying database interactions using
+    JavaScript objects, abstracting away SQL queries.
   </p>
 </article>
