--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,6 @@ article footer {
 
  h2 {
   color: blueviolet;
-  background-color:cornflowerblue;
   padding: 20px;
  }
 
@@ -16,8 +15,10 @@ article footer {
   padding: 20px;
   font-size: 25px;
  }
- 
- button {
-  
+ h1 {
+  padding: 30px;
  }
+
+
+ 
  
