--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,17 @@
-<header>
+{{> navbar}}
 
-</header>
+<article data-theme="dark">
 <div class="">
+  <a href="../" role="button">Home</a>
 <a href="./login" role="button">Login</a>
 <a href="./dashboard" role="button">Dashboard</a>
 </div>
+<header>
+<h1> The Tech Blog</h1>
+</header>
 <article>
   <header>
-    <h2>Why is MVC so important</h2>
+    <h2>Why is MVC so important?</h2>
   </header>
   <p>
     MVC separates data, interface, and control, making code organized and
@@ -16,7 +20,7 @@
 </article>
 <article>
   <header>
-    <h2>What are handlebars</h2>
+    <h2>What are handlebars?</h2>
   </header>
   <p>
     Handlebars is a templating language for dynamically generating HTML in web
@@ -25,7 +29,7 @@
 </article>
 <article>
   <header>
-    <h2>What are helpers</h2>
+    <h2>What are helpers?</h2>
   </header>
   <p>
     Helpers are functions that add custom logic to templates for tasks like
@@ -34,10 +38,11 @@
 </article>
 <article>
   <header>
-    <h2>What is sequelize</h2>
+    <h2>What is sequelize?</h2>
   </header>
   <p>
     Sequelize is a Node.js ORM for simplifying database interactions using
     JavaScript objects, abstracting away SQL queries.
   </p>
+</article>
 </article>
