--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/login">Login</a></li>
-    <li>Dashboard</li>
-  </ul>
+<div>
+     <a href="/" role="button">Home</a>
+    <a href="/login" role="button">Login</a>
+    <a href="/dashboard" role="button">Dashboard</a>
+ </div>
 </nav>
