--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 {{> navbar}}
-
+<article data-theme="dark">
 <header>
   <h2>Dashboard</h2>
 </header>
@@ -12,7 +12,7 @@
 
   {{/each}}
 </div>
-
+</article>
 {{!-- <article>
   <footer>
     <a href="#" role="button">View</a>
