--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,5 +3,13 @@
 <article data-theme="dark">
 <header>
   <h2>Login</h2>
-</header>
+  </header>
+<div>
+  <input id="email" class="input" type="email" placeholder="Email" />
+ 
+  <input id="password" class="input" type="password" placeholder="Password"/>
+
+  <button id="submit">Submit</button>
+  </div>
+
 </article>
