added userid in post model

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,12 @@
-<nav aria-label="breadcrumb">
+<article data-theme="dark">
+<nav>
 <div>
+   
+
      <a href="/" role="button">Home</a>
     <a href="/login" role="button">Login</a>
     <a href="/dashboard" role="button">Dashboard</a>
+<h1> The Tech Blog</h1>
  </div>
 </nav>
+</article>
