--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,28 +3,28 @@ article footer {
   justify-content: flex-end;
 }
 
- h2 {
+h2 {
   color: blueviolet;
   padding: 20px;
- }
+}
 
- p {
-  color:blue;
+p {
+  color: blue;
   font-weight: 600;
-  background-color:aliceblue;
+  background-color: aliceblue;
   padding: 20px;
   font-size: 25px;
- }
- h1 {
+}
+h1 {
   padding: 30px;
- }
+}
 
- a button{
-   padding: 50px;
+a button {
+  padding: 50px;
+}
 
- }
- 
-
-
- 
- 
+h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 60px;
+}
