--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,10 +2,11 @@
 <article data-theme="dark">
 <header>
   <h2>Login</h2>
-  <form action="/api/users/login" method="POST">
-  <input type="email" name="email" id="id" />
-  <input type ="password" name="password" id="password" />
-  <button type="Submit"></button>
-  </form>
+  </header>
+<div>
+  <input id="email" class="input" type="email" placeholder="Email" />
+    <input id="password" class="input" type="password" placeholder="Password"/>
+      <button id="submit">Submit</button>
+  </div>
 </header>
 </article>
