--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,11 +2,11 @@
 <article data-theme="dark">
 <header>
   <h2>Login</h2>
-  </header>
-<div>
+ <form action="/api/users/login" method="POST">
+
   <input id="email" class="input" type="email" placeholder="Email" />
     <input id="password" class="input" type="password" placeholder="Password"/>
-      <button id="submit">Submit</button>
-  </div>
+      <button type="submit">Submit</button>
+ </form>
 </header>
 </article>
