made some changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,8 @@
 </header>
 
 <form action="/api/post" method="POST">
-<input type="content" name="content" id="content" />
+<input type="title" name="title" id="title" value="" />
+<input type="content" name="content" id="content" value="" />
 <button type="submit">Submit</button>
 </form>
 </article>
